[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/GameCode/Menu/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Levels/Act-I-1.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GameCode/Menu/SaveGame.gd" type="Script" id=3]
[ext_resource path="res://scenes/GameCode/AudioPlayer.gd" type="Script" id=5]
[ext_resource path="res://scenes/GameCode/Game.gd" type="Script" id=6]
[ext_resource path="res://scenes/GameCode/Menu/VideoScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/GameCode/TitleScreen.tscn" type="PackedScene" id=9]

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 6 )
videoScreenSceneTemplate = ExtResource( 7 )
titleScreenSceneTemplate = ExtResource( 9 )
newGameLevelSceneTemplate = ExtResource( 2 )

[node name="CurrentScene" type="Node" parent="."]

[node name="UI" parent="." instance=ExtResource( 1 )]

[node name="SaveGame" type="Node" parent="."]
script = ExtResource( 3 )

[node name="AudioPlayer" type="Node" parent="."]
script = ExtResource( 5 )

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="AudioPlayer"]
bus = "Music"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="AudioPlayer"]
bus = "Music"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="AudioPlayer"]
bus = "Music"

[node name="Tween" type="Tween" parent="AudioPlayer"]

[connection signal="tween_completed" from="AudioPlayer/Tween" to="AudioPlayer" method="_on_Tween_tween_completed"]
